<resources>
    <string name="add_x_to_favorites">Add %1$s to favorites?</string>
    <string name="app_by_charles_madere">App by Charles Madere</string>
    <string name="app_restarted_to_apply_new_theme_">App restarted to apply new theme…</string>
    <string name="are_you_sure_you_want_to_delete_all_of_your_favorite_players">Are you sure you want to delete all of your favorite players?</string>
    <string name="are_you_sure_you_want_to_delete_your_identity">Are you sure you want to delete your identity? After deleting your identity, you can then set a new one.</string>
    <string name="auto">Auto</string>
    <string name="avatar">Avatar</string>
    <string name="back">Back</string>
    <string name="build_x_y">Build %1$d (%2$s)</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_rankings">Cancel rankings</string>
    <string name="charles_twitter_url" translatable="false">twitter.com/charlesmadere</string>
    <string name="clear">Clear</string>
    <string name="click_to_open_form">Click to open form</string>
    <string name="compare">Compare</string>
    <string name="contribute_your_changes">Contribute your changes!</string>
    <string name="credits">Credits</string>
    <string name="customize_identity">Customize identity</string>
    <string name="customize_identity_description">None currently selected</string>
    <string name="customize_region">Customize region</string>
    <string name="customize_region_description">The default is Norcal (GAR PR)</string>
    <string name="daily">Daily</string>
    <string name="day">Day</string>
    <string name="debug_only">Debug only</string>
    <string name="delete_all_favorite_players">Delete all favorite players</string>
    <string name="delete_identity">Delete identity</string>
    <string name="delimiter">,\u0020</string>
    <string name="easily_find_yourself_throughout_the_app">Easily find yourself throughout the app</string>
    <string name="empty_favorites_description">Long click on a player to add them to your favorites. When you add a player to your favorites, they\'ll instantly appear here.</string>
    <string name="error_loading_deep_link_data">Error loading deep link data!</string>
    <string name="error_loading_head_to_head">Error loading head to head!</string>
    <string name="error_loading_head_to_head_description">There are a few possibilities for this error. It could mean that you don\'t currently have a functional network connection. Or it could mean that these two players have never played in tournament before. Or it could mean that these players are from two different regions. But, you can swipe down to refresh and try again.</string>
    <string name="error_loading_player">Error loading player!</string>
    <string name="error_loading_players">Error loading players!</string>
    <string name="error_loading_rankings">Error loading rankings!</string>
    <string name="error_loading_regions">Error loading regions!</string>
    <string name="error_loading_regions_from_x">Error loading regions from %1$s!</string>
    <string name="error_loading_tournament">Error loading tournament!</string>
    <string name="error_loading_tournaments">Error loading tournaments!</string>
    <string name="every_2_days">Every 2 days</string>
    <string name="every_2_weeks">Every 2 weeks</string>
    <string name="every_3_days">Every 3 days</string>
    <string name="every_5_days">Every 5 days</string>
    <string name="every_10_days">Every 10 days</string>
    <string name="every_8_hours">Every 8 hours</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_players">Favorite players</string>
    <string name="gar_pr" translatable="false">GAR PR</string>
    <string name="gar_twitter_url" translatable="false">twitter.com/garsh0p</string>
    <string name="germ_website_url" translatable="false">germroverso.com</string>
    <string name="head_to_head">Head to Head</string>
    <string name="home">Home</string>
    <string name="identity">Identity</string>
    <string name="identity_region_format">%1$s (%2$s)</string>
    <string name="identity_saved_">Identity saved!</string>
    <string name="last_poll">Last poll</string>
    <string name="last_sync_x">Last sync: %1$s</string>
    <string name="loading_deep_link_">Loading deep link…</string>
    <string name="loading_favorite_players_">Loading favorite players…</string>
    <string name="loading_identity_">Loading identity…</string>
    <string name="loading_rankings_">Loading rankings…</string>
    <string name="loading_sync_status_">Loading sync status…</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="matches">Matches</string>
    <string name="more">More</string>
    <string name="must_be_charging">Must be charging</string>
    <string name="must_be_on_wifi">Must be on wifi</string>
    <string name="name_region_format">%1$s (%2$s)</string>
    <string name="night">Night</string>
    <string name="none">None</string>
    <string name="norcal" translatable="false">Norcal</string>
    <string name="not_gar_pr" translatable="false">Not GAR PR</string>
    <string name="no_favorite_players">No favorite players</string>
    <string name="no_log_entries">No log entries</string>
    <string name="no_matches">No matches</string>
    <string name="no_player_data">No player data</string>
    <string name="no_players">No players</string>
    <string name="no_rankings">No rankings</string>
    <string name="no_regions">No regions</string>
    <string name="no_search_results_for_x">No search results for %1$s</string>
    <string name="no_tournaments">No tournaments</string>
    <string name="number">Number</string>
    <string name="ok">OK</string>
    <string name="open_bracket_link">Open bracket link</string>
    <string name="open_challonge_link">Open Challonge link</string>
    <string name="open_smash_gg_link">Open smash.gg link</string>
    <string name="open_source_on_github">Open source on GitHub</string>
    <string name="other">Other</string>
    <string name="players">Players</string>
    <string name="please_wait_">Please wait…</string>
    <string name="poll_frequency">Poll frequency</string>
    <string name="poll_has_yet_to_occur">Poll has yet to occur</string>
    <string name="question_mark">\?</string>
    <string name="rank">Rank</string>
    <string name="rankings">Rankings</string>
    <string name="x_rankings_">%1$s rankings…</string>
    <string name="x_rankings_have_been_updated">%1$s rankings have been updated!</string>
    <string name="rankings_polling">Rankings polling</string>
    <string name="rankings_polling_description">This feature will periodically poll your region\'s GAR PR (or Not GAR PR) and let you know if its rankings have been updated. Note that the poll frequency is just an estimate, it\'s not guaranteed to run at these exact intervals.</string>
    <string name="rankings_update_notifications_description">Notification that shows whenever your region\'s rankings have been updated.</string>
    <string name="rankings_update_notifications_name">Rankings Update Notifications</string>
    <string name="rating">Rating</string>
    <string name="rating_x">Rating: %1$s</string>
    <string name="region">Region</string>
    <string name="region_endpoint_format">%1$s (%2$s)</string>
    <string name="region_saved_">Region saved!</string>
    <string name="remove_x_from_favorites">Remove %1$s from favorites?</string>
    <string name="ringtone">Ringtone</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_">Search…</string>
    <string name="search_matches_">Search matches…</string>
    <string name="search_matches_and_players_">Search matches and players…</string>
    <string name="search_players_">Search players…</string>
    <string name="search_rankings_and_favorites_">Search rankings and favorites…</string>
    <string name="search_tournaments_">Search tournaments…</string>
    <string name="settings">Settings</string>
    <string name="set_identity">Set Identity</string>
    <string name="set_region">Set Region</string>
    <string name="share">Share</string>
    <string name="share_">Share…</string>
    <string name="share_rankings">Share rankings</string>
    <string name="share_tournaments">Share tournaments</string>
    <string name="share_x">Share %1$s</string>
    <string name="sheik_artwork_by_germ">Sheik artwork by Germ</string>
    <string name="show">Show</string>
    <string name="show_test_notification">Show test notification</string>
    <string name="smash_roster">Smash roster</string>
    <string name="smash_roster_polling_description">This feature will periodically download the latest version of the Smash roster. But if you\'d like to update now, just click below.</string>
    <string name="smash_roster_sync_status">Smash roster sync status</string>
    <string name="start_using_the_app">Start using the app</string>
    <string name="start_using_the_app_description">You can change your region and identity at any time in Settings.</string>
    <string name="submit_your_own_profile_to_the_roster">Submit your own profile to the roster!</string>
    <string name="swipe_to_refresh_and_check_again">Swipe down to refresh and check again</string>
    <string name="swipe_to_refresh_and_try_again">Swipe down to refresh and try again</string>
    <string name="syncing_now_">Syncing now…</string>
    <string name="sync_error_occurred">Sync error occurred</string>
    <string name="sync_error_occurred_code">Sync error occurred (%1$d)</string>
    <string name="sync_error_occurred_x">Sync error occurred: %1$s</string>
    <string name="sync_error_occurred_x_code">Sync error occurred: %1$s (%2$d)</string>
    <string name="sync_has_yet_to_occur">Sync has yet to occur</string>
    <string name="system">System</string>
    <string name="tag_and_message">%1$s: %2$s</string>
    <string name="theme">Theme</string>
    <string name="these_two_competitors_have_never_played_in_tournament_before">These two competitors have never played in tournament before.</string>
    <string name="tournaments">Tournaments</string>
    <string name="x_tournaments_">%1$s tournaments…</string>
    <string name="twitch">Twitch</string>
    <string name="twitter">Twitter</string>
    <string name="unable_to_launch_ringtone_picker">Unable to launch ringtone picker</string>
    <string name="unable_to_open_link">Unable to open link!</string>
    <string name="unadjusted_x_y">Unadjusted: %1$s (+/- %2$s)</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="unknown">Unknown</string>
    <string name="updated_x">Updated %1$s</string>
    <string name="use_rankings_polling">Use rankings polling</string>
    <string name="version_x">Version %1$s</string>
    <string name="vibrate">Vibrate</string>
    <string name="view">View</string>
    <string name="view_">View…</string>
    <string name="view_all_players">View all players</string>
    <string name="view_logs">View logs</string>
    <string name="view_logs_description">Read logs normally only visible via Android\'s Logcat. Really only useful for debug purposes.</string>
    <string name="website_by_ivan_van">Website by Ivan Van</string>
    <string name="weekly">Weekly</string>
    <string name="x_activity_requirements_are_y_within_the_last_z">%1$s\'s activity requirements are %2$s within the last %3$s.</string>
    <string name="yes">Yes</string>
    <string name="yes_add">Yes, add</string>
    <string name="yes_remove">Yes, remove</string>
    <string name="youtube">YouTube</string>
    <string name="youve_selected_a_region_but_havent_saved">You\'ve selected a region but haven\'t saved. Are you sure you still want to close this screen?</string>
    <string name="youve_selected_an_identity_but_havent_saved">You\'ve selected an identity but haven\'t saved. Are you sure you still want to close this screen?</string>
</resources>