<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar" />

    <ScrollView
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <com.garpr.android.views.RegionPreferenceView
                android:id="@+id/regionPreferenceView"
                app:icon="@drawable/ic_location_on_white_24dp"
                style="@style/PreferenceView" />

            <com.garpr.android.views.ThemePreferenceView
                android:id="@+id/themePreferenceView"
                app:icon="@drawable/ic_format_paint_white_24dp"
                style="@style/PreferenceView" />

            <com.garpr.android.views.IdentityPreferenceView
                android:id="@+id/identityPreferenceView"
                app:icon="@drawable/ic_face_white_24dp"
                style="@style/PreferenceView" />

            <com.garpr.android.views.DeleteFavoritePlayersPreferenceView
                android:id="@+id/deleteFavoritePlayersPreferenceView"
                style="@style/PreferenceView" />

            <include
                layout="@layout/divider" />

            <TextView
                android:text="@string/rankings_polling"
                style="@style/SettingsCardTitle" />

            <TextView
                android:text="@string/rankings_polling_description"
                style="@style/SettingsCardDescription" />

            <com.garpr.android.views.CheckablePreferenceView
                android:id="@+id/cpvUseRankingsPolling"
                app:checkableType="switch_compat"
                app:titleText="@string/use_rankings_polling"
                style="@style/PreferenceView" />

            <com.garpr.android.views.RankingsPollingPollFrequencyPreferenceView
                android:id="@+id/pollFrequencyPreferenceView"
                style="@style/PreferenceView" />

            <com.garpr.android.views.RingtonePreferenceView
                android:id="@+id/ringtonePreferenceView"
                style="@style/PreferenceView" />

            <com.garpr.android.views.CheckablePreferenceView
                android:id="@+id/cpvVibrate"
                app:titleText="@string/vibrate"
                style="@style/PreferenceView" />

            <com.garpr.android.views.CheckablePreferenceView
                android:id="@+id/cpvMustBeOnWifi"
                app:titleText="@string/must_be_on_wifi"
                style="@style/PreferenceView" />

            <com.garpr.android.views.CheckablePreferenceView
                android:id="@+id/cpvMustBeCharging"
                app:titleText="@string/must_be_charging"
                style="@style/PreferenceView" />

            <com.garpr.android.views.LastPollPreferenceView
                android:id="@+id/lastPollPreferenceView"
                style="@style/PreferenceView" />

            <com.garpr.android.views.TestNotificationView
                android:id="@+id/testNotificationView"
                style="@style/PreferenceView" />

            <include
                layout="@layout/divider" />

            <TextView
                android:text="@string/smash_roster"
                style="@style/SettingsCardTitle" />

            <TextView
                android:text="@string/smash_roster_polling_description"
                style="@style/SettingsCardDescription" />

            <com.garpr.android.views.SmashRosterSyncPreferenceView
                android:id="@+id/smashRosterPreferenceView"
                style="@style/PreferenceView" />

            <com.garpr.android.views.SimplePreferenceView
                android:id="@+id/smashRosterFormLink"
                app:descriptionText="@string/click_to_open_form"
                app:icon="@drawable/ic_open_in_browser_white_24dp"
                app:titleText="@string/submit_your_own_profile_to_the_roster"
                style="@style/PreferenceView" />

            <include
                layout="@layout/divider" />

            <TextView
                android:text="@string/credits"
                style="@style/SettingsCardTitle" />

            <com.garpr.android.views.SimplePreferenceView
                android:id="@+id/spvCharlesTwitter"
                app:descriptionText="@string/charles_twitter_url"
                app:titleText="@string/app_by_charles_madere"
                style="@style/PreferenceView" />

            <com.garpr.android.views.SimplePreferenceView
                android:id="@+id/spvGitHub"
                app:descriptionText="@string/contribute_your_changes"
                app:titleText="@string/open_source_on_github"
                style="@style/PreferenceView" />

            <com.garpr.android.views.SimplePreferenceView
                android:id="@+id/spvGarTwitter"
                app:descriptionText="@string/gar_twitter_url"
                app:titleText="@string/website_by_ivan_van"
                style="@style/PreferenceView" />

            <com.garpr.android.views.SimplePreferenceView
                android:id="@+id/spvTsuaiiTwitter"
                app:descriptionText="@string/tsuaii_twitter_url"
                app:titleText="@string/sheik_artwork_by_tsuaii"
                style="@style/PreferenceView" />

            <include
                layout="@layout/divider" />

            <com.garpr.android.views.SimplePreferenceView
                android:id="@+id/spvLogViewer"
                app:descriptionText="@string/view_logs_description"
                app:titleText="@string/view_logs"
                style="@style/PreferenceView" />

            <com.garpr.android.views.BuildInfoPreferenceView
                style="@style/PreferenceView" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
