<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.garpr.android.features.common.views.SearchToolbar
        android:hint="@string/search_players_"
        android:id="@+id/toolbar"
        app:showUpNavigation="true"
        app:titleText="@string/players"
        style="@style/Toolbar" />

    <com.garpr.android.features.common.views.RefreshLayout
        android:id="@+id/refreshLayout"
        app:scrollingChildId="@+id/recyclerView"
        style="@style/RefreshLayout">

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/recyclerView"
                android:visibility="gone"
                tools:listitem="@layout/item_player"
                tools:visibility="visible"
                style="@style/RecyclerView" />

            <com.garpr.android.features.common.views.NoContentLinearLayout
                android:id="@+id/empty"
                app:titleText="@string/no_players"
                style="@style/NoContentLinearLayout.Empty" />

            <com.garpr.android.features.common.views.NoContentLinearLayout
                android:id="@+id/error"
                app:titleText="@string/error_loading_players"
                style="@style/NoContentLinearLayout.Error" />

        </FrameLayout>

    </com.garpr.android.features.common.views.RefreshLayout>

</LinearLayout>
