<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.garpr.android.features.common.views.GarToolbar
        android:id="@+id/toolbar"
        app:showUpNavigation="true"
        app:titleText="@string/head_to_head"
        style="@style/Toolbar" />

    <com.garpr.android.features.common.views.RefreshLayout
        android:id="@+id/refreshLayout"
        style="@style/RefreshLayout">

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:visibility="gone"
                style="@style/RecyclerView.WithSections" />

            <com.garpr.android.features.common.views.NoContentLinearLayout
                android:id="@+id/error"
                app:descriptionText="@string/error_loading_head_to_head_description"
                app:titleText="@string/error_loading_head_to_head"
                tools:visibility="visible"
                style="@style/NoContentLinearLayout.Error" />

        </FrameLayout>

    </com.garpr.android.features.common.views.RefreshLayout>

</LinearLayout>
