<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">

    <ImageButton
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:id="@+id/upNavigationButton"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:paddingEnd="@dimen/root_padding"
        android:paddingStart="@dimen/root_padding"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Space
        android:layout_height="match_parent"
        android:layout_width="@dimen/root_padding" />

    <LinearLayout
        android:id="@+id/titleContainer"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/root_padding"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_vertical"
            android:id="@+id/titleView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/text_size_xlarge"
            tools:text="@string/rankings" />

        <TextView
            android:ellipsize="end"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center_vertical"
            android:id="@+id/subtitleView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:textColor="?android:attr/textColorSecondaryInverse"
            android:textSize="@dimen/text_size_normal"
            android:visibility="gone"
            tools:text="@string/norcal"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuExpansionContainer"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="horizontal" />

</merge>
