<?xml version="1.0" encoding="utf-8"?>
<com.garpr.android.views.TournamentInfoItemView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:ellipsize="end"
        android:gravity="bottom"
        android:id="@+id/tvName"
        android:layout_height="128dp"
        android:layout_marginEnd="@dimen/root_padding"
        android:layout_marginStart="@dimen/root_padding"
        android:layout_width="match_parent"
        android:textColor="?android:attr/textColorPrimary"
        app:autoSizeMaxTextSize="@dimen/text_size_xxxlarge"
        app:autoSizeMinTextSize="@dimen/text_size_xlarge"
        app:autoSizeTextType="uniform"
        tools:text="Melee @ the Made #32"
        style="@style/MediumOrBoldText" />

    <TextView
        android:id="@+id/tvRegion"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/root_padding"
        android:layout_marginEnd="@dimen/root_padding"
        android:layout_marginStart="@dimen/root_padding"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_small"
        tools:text="@string/norcal" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/root_padding"
        android:layout_marginStart="@dimen/root_padding"
        android:layout_width="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        tools:text="November 28, 1989" />

    <TextView
        android:id="@+id/tvEntrantsCount"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/root_padding"
        android:layout_marginEnd="@dimen/root_padding"
        android:layout_marginStart="@dimen/root_padding"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_small"
        tools:text="1,024 entrants" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/root_padding"
        android:layout_marginEnd="@dimen/root_padding"
        android:layout_marginStart="@dimen/root_padding"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <com.garpr.android.views.TintedTextView
            android:drawableTop="@drawable/ic_open_in_browser_white_24dp"
            android:id="@+id/tvOpenLink"
            android:layout_marginEnd="@dimen/root_padding_half"
            android:text="@string/open_bracket_link"
            style="@style/TextButton" />

        <com.garpr.android.views.TintedTextView
            android:drawableTop="@drawable/ic_share_white_24dp"
            android:id="@+id/tvShare"
            android:text="@string/share"
            style="@style/TextButton" />

    </LinearLayout>

    <com.garpr.android.views.TournamentTabsView
        android:id="@+id/tournamentTabsView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</com.garpr.android.views.TournamentInfoItemView>
